# synthetic-classifier-benchmark

./: README.md  analysis.ipynb  main.py  pyproject.toml  requirements.txt
algorithm/: __init__.py  algorithm_training.py  data_generation.py
analysis_fce/: __init__.py
