[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation-conference"
version = "0.1.0"
description = "Simulation Conference Project"
readme = "README.md"
requires-python = "==3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

